GNOME Bugzilla – Bug 748580
mxf: fix leak in mxfmetadata
Last modified: 2015-04-28 14:56:35 UTC
.
Created attachment 302507 [details] [review] mfx: fix descriptor leak Free the existing descriptor array, if any, before replacing it. Fix leaks with the validate.file.playback.scrub_forward_seeking.test-mpeg2-mp3_mxf scenario.
Review of attachment 302507 [details] [review]: g_free is null safe. Could you submit another patch that removes the extra if checks?
Created attachment 302515 [details] [review] mfx: fix descriptor leak Free the existing descriptor array, if any, before replacing it. Fix leaks with the validate.file.playback.scrub_forward_seeking.test-mpeg2-mp3_mxf scenario.
commit da113b5ad7976c001633c7f79a2b8b95935f8176 Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Tue Apr 28 11:28:39 2015 +0200 mxf: fix descriptor leak Free the existing descriptor array, if any, before replacing it. Fix leaks with the validate.file.playback.scrub_forward_seeking.test-mpeg2-mp3_mxf scenario. https://bugzilla.gnome.org/show_bug.cgi?id=748580